--- a/src/CDGeB1/WebGUI/templates/download.html
+++ b/src/CDGeB1/WebGUI/templates/download.html
@@ -3,6 +3,6 @@
 <head><title>Download File</title></head>
 <body>
     <h2>File Ready for Download</h2>
-    <a href="/{{ output_file }}">Download Output File</a>
+    <a href="/download/{{ output_file_path }}">Download Output File</a>
 </body>
 </html>
