--- a/src/CDGeB1/WebGUI/templates/upload.html
+++ b/src/CDGeB1/WebGUI/templates/upload.html
@@ -4,6 +4,7 @@
 <body>
     <h2>Upload Files</h2>
     <form action="/uploader" method="post" enctype="multipart/form-data">
+        <!-- <input type="text" name="request" placeholder="(Optional: Request Name)"><br><br> -->
         <label for="measurements.csv">measurements.csv:</label>
         <input type="file" name="measurements" required><br><br>
         <label for="servers.csv">servers.csv:</label>
