--- a/src/WebGUI/templates/upload.html
+++ b/src/WebGUI/templates/upload.html
@@ -13,5 +13,6 @@
         <input type="file" name="solution" required><br><br>
         <input type="submit" value="Upload">
     </form>
+    <p>Version: V0.4</p>
 </body>
 </html>
