--- a/src/CDG-Server/templates/upload.html
+++ b/src/CDG-Server/templates/upload.html
@@ -1,18 +1,37 @@
 <!doctype html>
 <html>
-<head><title>Upload Files</title></head>
+<head>
+    <title>Upload Files</title>
+</head>
 <body>
     <h2>Upload Files</h2>
+
     <form action="/uploader" method="post" enctype="multipart/form-data">
-        <!-- <input type="text" name="request" placeholder="(Optional: Request Name)"><br><br> -->
-        <label for="measurements.csv">measurements.csv:</label>
-        <input type="file" name="measurements" required><br><br>
-        <label for="servers.csv">servers.csv:</label>
-        <input type="file" name="servers" required><br><br>
-        <label for="solution.csv">solution.csv:</label>
-        <input type="file" name="solution" required><br><br>
+        <!-- First Section -->
+        <fieldset>
+            <legend>Training Dataset</legend>
+            <label for="measurements.csv">measurements.csv:</label>
+            <input type="file" name="measurements" required><br><br>
+            <label for="servers.csv">servers.csv:</label>
+            <input type="file" name="servers" required><br><br>
+        </fieldset>
+
+        <!-- Second Section -->
+        <fieldset>
+            <legend>Testing Dataset</legend>
+            <label for="measurements2.csv">measurements.csv:</label>
+            <input type="file" name="measurements2" required><br><br>
+            <label for="servers2.csv">servers.csv:</label>
+            <input type="file" name="servers2" required><br><br>
+            <label for="datacenters.csv">datacenters.csv:</label>
+            <input type="file" name="datacenters" required><br><br>
+            <label for="solution.csv">solution.csv (optional):</label>
+            <input type="file" name="solution"><br><br>
+        </fieldset>
+
         <input type="submit" value="Upload">
     </form>
+
     <p>Version: v0.5</p>
 </body>
 </html>
