fixed issues: naming conventions and magic numbers

--- a/src/CDG-Server/templates/upload.html
+++ b/src/CDG-Server/templates/upload.html
@@ -11,18 +11,18 @@
         <fieldset>
             <legend>Training Dataset</legend>
             <label for="measurements.csv">measurements.csv:</label>
-            <input type="file" name="measurements" required><br><br>
+            <input type="file" name="measurements-1party" required><br><br>
             <label for="servers.csv">servers.csv:</label>
-            <input type="file" name="servers" required><br><br>
+            <input type="file" name="servers-1party" required><br><br>
         </fieldset>
 
         <!-- Second Section -->
         <fieldset>
             <legend>Testing Dataset</legend>
             <label for="measurements2.csv">measurements.csv:</label>
-            <input type="file" name="measurements2" required><br><br>
+            <input type="file" name="measurements-3party" required><br><br>
             <label for="servers2.csv">servers.csv:</label>
-            <input type="file" name="servers2" required><br><br>
+            <input type="file" name="servers-3party" required><br><br>
             <label for="datacenters.csv">datacenters.csv:</label>
             <input type="file" name="datacenters" required><br><br>
             <label for="solution.csv">solution.csv (optional):</label>
