--- a/src/CDG-Server/templates/upload.html
+++ b/src/CDG-Server/templates/upload.html
@@ -5,9 +5,7 @@
 </head>
 <body>
     <h2>Upload Files</h2>
-
     <form action="/uploader" method="post" enctype="multipart/form-data">
-        <!-- First Section -->
         <fieldset>
             <legend>Training Dataset</legend>
             <label for="measurements.csv">measurements.csv:</label>
@@ -15,8 +13,6 @@
             <label for="servers.csv">servers.csv:</label>
             <input type="file" name="servers-1party" required><br><br>
         </fieldset>
-
-        <!-- Second Section -->
         <fieldset>
             <legend>Testing Dataset</legend>
             <label for="measurements2.csv">measurements.csv:</label>
@@ -28,7 +24,11 @@
             <label for="solution.csv">solution.csv (optional):</label>
             <input type="file" name="solution"><br><br>
         </fieldset>
-
+        <label for="method">Choose calculation method:</label>
+        <select name="method" id="method">
+            <option value="original">Original</option>
+            <option value="optimizer">Optimizer</option>
+        </select><br><br>
         <input type="submit" value="Upload">
     </form>
 
