Update API client scripts.

--- a/src/CDG-Server/templates/upload.html
+++ b/src/CDG-Server/templates/upload.html
@@ -38,7 +38,7 @@
             <label for="rtt_method">2-hop RTT extraction method:</label>
             <select name="rtt_method" id="rtt_method">
                 <option value="Subtraction">Subtraction</option>
-                <option value="Optimizer">Optimizer</option>
+                <option value="Optimization">Optimization</option>
             </select><br><br>
 
             <label for="geolocation_method">Geolocation method:</label>
