Rename Fingerprinting method.

--- a/cdg_server/templates/upload.html
+++ b/cdg_server/templates/upload.html
@@ -44,7 +44,7 @@
             <label for="geolocation_method">Geolocation method:</label>
             <select name="geolocation_method" id="geolocation_method">
                 <option value="Multilateration">Multilateration</option>
-                <option value="Profiling">Profiling</option>
+                <option value="Fingerprinting">Fingerprinting</option>
             </select><br><br>
 
         </fieldset>
